<resources>
    <string name="app_name">notificreation</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_notification">Notificreation</string>
    <string name="notification_body_label">Message</string>
    <string name="notification_title_label">Title</string>
    <string name="notification_button_label">Add</string>
    <string name="notification_color_label">Color</string>
    <string name="notification_help_label">help</string>
    <string name="persistent_check_box_label">Service notification</string>
    <string name="severity_three">Red</string>
    <string name="severity_two">Amber</string>
    <string name="severity_one">Green</string>
    <string name="title_activity_app_bar">AppBarActivity</string>
    <string name="notify_button">confirm</string>
    <string name="color_palette_icon">confirm</string>
    <string name="alert_dialog">"Coloring of the notification is only allowed On Android O and above. To enable this the notification has to be made persistent as a service. Tap on the notification to dismiss and end the service"</string>

    <!-- Shared preferences strings-->
    <string name="saved_color_key">saved_color</string>



</resources>
